working update prize

--- a/app/partials/prizesEdit.html
+++ b/app/partials/prizesEdit.html
@@ -29,7 +29,7 @@
         </div>
         <div class="form-group">
             <div class="col-sm-offset-3 col-sm-10">
-                <button class="btn btn-success" ng-click="prize.update()">Save</button>
+                <button class="btn btn-success" ng-click="update(prize)">Save</button>
                 <button class="btn btn-default" ng-click="cancel()">Cancel</button>
             </div>
         </div>
